Renamed `TropicalFIsh` -> `tropical_fish_compendium`

--- a/static/lang/en_us.json
+++ b/static/lang/en_us.json
@@ -1,6 +1,6 @@
 {
   "global.author": "Dev: Maner & EclairDeFeu360, Idea: Goldawn, Textures: Mardele, Mayleenor, Moon250 & StMaxoso",
-  "global.name": "Tropical Fish",
+  "global.name": "tropical fish compendium",
   "load.hover.preMessage": "The pack has been successfully loaded",
   "load.hover.postMessage": "%s\nClick to learn more",
   "advancement.catch.fish.title": "Tropical fish",
