--- a/static/lang/fr_fr.json
+++ b/static/lang/fr_fr.json
@@ -1,5 +1,5 @@
 {
-  "global.author": "Dev : Maner & EclairDeFeu360, Idée : Goldawn, Textures : Mardele, Mayleenor, Moon250 & StMaxoso",
+  "global.author": "Dev: Zer0p1us, Maner, EclairDeFeu360, Idée: Goldawn, Textures: Mardele, Mayleenor, Moon250 & StMaxoso",
   "global.name": "Poissons tropicaux",
   "load.hover.preMessage": "Le pack a été chargé avec succès",
   "load.hover.postMessage": "%s\nCliquez pour en savoir plus",
