Added black variants strings

--- a/static/lang/fr_fr.json
+++ b/static/lang/fr_fr.json
@@ -23,6 +23,7 @@
   "fish.type.spotty": "Truiton",
   "fish.type.stripey": "Bigarrin",
   "fish.type.sunstreak": "Héliorai",
+  "fish.color.black": "Noir",
   "fish.color.blue": "Bleu",
   "fish.color.brown": "Marron",
   "fish.color.cyan": "Cyan",
