--- a/static/lang/en_us.json
+++ b/static/lang/en_us.json
@@ -1,6 +1,6 @@
 {
-  "global.author": "Dev: Zer0p1us, Maner, EclairDeFeu360 Idea: Goldawn, Textures: Mardele, Mayleenor, Moon250 & StMaxoso",
-  "global.name": "tropical fish compendium",
+  "global.author": "Dev: Maner/EclairDeFeu360/Zer0p1us, Idea: Goldawn, Textures: Mardele/Mayleenor/Moon250/StMaxoso",
+  "global.name": "Tropical Fish",
   "load.hover.preMessage": "The pack has been successfully loaded",
   "load.hover.postMessage": "%s\nClick to learn more",
   "advancement.catch.fish.title": "Tropical fish",
